Fixed border and spacing on patientlist

--- a/css/custom.css
+++ b/css/custom.css
@@ -41,7 +41,7 @@
     background-size: cover;
     height: 10vw;
     width: 10vw;
-    padding: 10px;
+    margin: 10px;
 }
 
 #patientlist {
@@ -51,4 +51,8 @@
 
 .patientlist-row {
     cursor: pointer;
+}
+
+.patientlist-container {
+    margin: 20px;
 }
